# Marker-Gemini-Translator

./: .gitignore  .pre-commit-config.yaml  Index.md  README.md  README.zh-TW.md  config.yaml  dmetadata.ps1  main.py  pyproject.toml  requirements.txt  ruff_errors.txt  run_daily.bat  sources.yaml
.agent/workflows/: daily-dev.md  git-commit.md
.gemini/: errors.md
.github/workflows/: ci.yml
.obsidian/: app.json  appearance.json  community-plugins.json  daily-notes.json  graph.json  workspace.json
.obsidian/plugins/obsidian-custom-attachment-location/: data.json
.obsidian/plugins/obsidian-shellcommands/: data.json
.obsidian/plugins/pdf-plus/: data.json
.obsidian/snippets/: disable-pdf-invert.css
Papers/Computer Vision/: SymPoint.zh.md  VecFormer.zh.md  YOLaT.zh.md
Papers/Daily Notes/: 2026-01-18.md  2026-01-19.md
Papers/Database/Automated_Ranking_of_Database_Query_Results/: Automated_Ranking_of_Database_Query_Results.zh.md
Papers/Database/Designing Fair Ranking Schemes/: Designing Fair Ranking Schemes.zh.md
Papers/Database/Probabilistic Ranking of Database Query Results/: Probabilistic Ranking of Database Query Results 閱讀筆記.md  Probabilistic Ranking of Database Query Results.zh.md  Research_topics.md
Papers/Database/Probabilistic_Information_Retrieval_Approach_for_Ranking_of_Database_Query_Results/: Probabilistic_Information_Retrieval_Approach_for_Ranking_of_Database_Query_Results.zh.md
Papers/Hearing loss Simulation/: HL-MANBA.zh.md  Neuro-MSBG.zh.md
Papers/Hearing loss Simulation/HL-MANBA/: HL-MANBA.zh.md
Papers/knowledge graph/: Towards Foundation Model on Temporal Knowledge Graph Reasoning.zh.md  Translate-And-Metadata.ps1
Papers/time series/: Translate-Pdf.ps1
data/: user_profile.json
legacy_code/: Translate-With-Markdown.ps1  paper_translator_v6.py
scripts/: Translate-And-Metadata.ps1  Translate-With-Markdown.ps1  翻譯腳本用法.md
src/: client.py  downloader.py  harvester.py  paper_translator.py  paper_translator_v6.py  ranker.py  translator.py  writer.py
template/: Paper reading note.md  Paper_Translation_Template.md
tests/: test_imports.py
(+41 files in other folders)
