[project]
name = "paper-reading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-core>=2.29.0",
    "google-genai>=1.62.0",
    "markdown>=3.9",
    "marker-pdf>=1.10.2",
    "markitdown[pdf]>=0.1.4",
    "numpy>=2.0.2",
    "pymupdf4llm>=0.2.9",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "tenacity>=9.1.2",
    "types-pyyaml>=6.0.12.20250915",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["legacy_code", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q"
pythonpath = "."
testpaths = [
    "tests",
]
